--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cookie-parser": "1.3",
         "ejs": "^0.8.8",
         "express": "4.8",
         "express-load": "^1.1.16",
+        "express-session": "1.7",
         "method-override": "^2.3.10",
-        "mongoose": "^6.3.3"
+        "mongoose": "^6.3.3",
+        "mongoose-findorcreate": "^0.1.2",
+        "passport": "^0.2.2",
+        "passport-github": "^0.1.5"
     },
     "engines": {
         "node": "12.x"
