--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
         "cookie-parser": "1.3",
         "ejs": "^0.8.8",
         "express": "4.8",
-        "express-load": "^1.1.16",
+        "express-load": "1.1",
         "express-session": "1.7",
         "method-override": "^2.3.10",
         "mongoose": "^6.3.3",
         "mongoose-findorcreate": "^0.1.2",
         "passport": "^0.2.2",
-        "passport-github": "^0.1.5"
+        "passport-github": "^0.1.5",
+        "passport-github2": "^0.1.12"
     },
     "engines": {
         "node": "12.x"
