--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "express": "4.8",
         "express-load": "1.1",
         "express-session": "1.7",
+        "helmet": "^0.4.2",
         "method-override": "^2.3.10",
+        "mongo-sanitize": "1.0",
         "mongoose": "^6.3.3",
         "mongoose-findorcreate": "^0.1.2",
         "passport": "^0.2.2",
